alguns ajustes de responsividade

--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
   <link rel="stylesheet" href="reset.css">
   <link rel="shortcut icon" href="./src/assets/icons/nucleo logo fundo branco.jpg" type="image/x-icon" />
   <link rel="stylesheet" href="style.css">
-  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
 </head>
 <body>
-  <header id="page-top"><nav class="menu">
-
-        <nav class="nav__item logo_nuga"><a class="item_menu" href="#page-top"> NuGA </a></nav>  
-        <nav class="nav__item"><a class="item_menu" href="#historia">História</a></nav>
-        <nav class="nav__item"><a class="item_menu" href="#atividades">Atividades</a></nav>
-        <nav class="nav__item"><a class="item_menu" href="#contato">Contato</a></nav>
+  <header id="page-top">
+    <nav class="menu">
+      <ul>
+        <li class="nav__item logo_nuga"><a class="item_menu" href="#page-top"> <i class="fa fa-home" aria-hidden="true"></i> </a></li>  
+        <li class="nav__item"><a class="item_menu" href="#historia">História</a></li>
+        <li class="nav__item"><a class="item_menu" href="#atividades">Atividades</a></li>
+        <li class="nav__item"><a class="item_menu" href="#contato">Contato</a></li>
+      </ul>
     </nav>
   </header>
   <main>
