--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Página oficial do Núcleo Guardiões do Amor">
+  <meta name="keywords" content="Núcleo, Guardiões do Amor, Solidariedade, Ação Social">
+  <meta name="author" content="Johnny Richard">
   <title>Nucleo Os Guardioes do Amor</title>
   <link rel="stylesheet" href="reset.css">
+  <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto&display=swap" as="style">
   <link rel="shortcut icon" href="./src/assets/icons/nucleo logo fundo branco.jpg" type="image/x-icon" />
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -81,9 +85,10 @@
           <strong>Telefone:</strong> (16) 3368-3964 <br><br>
 
           <strong>Chave pix para doações:</strong> #@Ad2321-322142eda443
+          <p>&copy; 2025 Núcleo G.A - Todos os direitos reservados.</p>
         </div>
       </div>
-
+    
     </section>
   </footer>
   <script src="script.js"></script>
