--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       </div>
 
       <!-- Botão "Home" sempre visível -->
-      <button class="nav__item home_nuga" id="home"><a class="item_menu" href="#page-top">
+      <a class="item_menu" href="#page-top"><button class="nav__item home_nuga" id="home">
         <i class="fa fa-home" aria-hidden="true"></i>
-      </a></button>
+      </button></a>
 
       <!-- Lista do menu (inicialmente oculta) -->
       <ul id="menu__list">
